--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+label {
+  font-size: 12px;
+  font-weight: 600;
+}
